<?xml version="1.0"?>
<package>
  <name>geometry_graph_msgs</name>
  <version>0.1.0</version>
  <description>ROS messages for publishing graphs that represent the environment.</description>

  <maintainer email="clemens.eppner@tu-berlin.de">Clemens Eppner</maintainer>

  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/geometry_graph_msgs</url> -->

  <author email="clemens.eppner@tu-berlin.de">Clemens Eppner</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>

  <export>
  </export>
</package>
